-  add service call to search books - update UI to show search result books - TODO1: using Glide to download image thumbs, and optimize layout - TODO2: add loadmore feature

--- a/GoogleBooksApp/app/src/main/res/values/strings.xml
+++ b/GoogleBooksApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GoogleBooksApp</string>
+    <string name="search_hint">Enter some text to search books...</string>
 </resources>
