--- a/GoogleBooksApp/app/src/main/res/values/strings.xml
+++ b/GoogleBooksApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GoogleBooksApp</string>
     <string name="search_hint">Enter some text to search books...</string>
+    <string name="text_network_error">Network is unavailable. Check your connection and try again later!</string>
+    <string name="text_server_error">There\'s problem with server! Try again later!</string>
+    <string name="text_no_result">No matching book found! Try another keyword!</string>
 </resources>
